<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="language_picker_title">IZBERI GOVORNI JEZIK</string>
    <string name="language_label_sl">SI SLOVEN&#352;&#268;INA</string>
    <string name="language_label_uk">UA &#x423;&#x41A;&#x420;&#x410;&#x407;&#x41D;&#x421;&#x42C;&#x41A;&#x410;</string>
    <string name="language_label_en">EN ENGLISH</string>
    <string name="language_label_de">DE DEUTSCH</string>
    <string name="language_label_hr">HR HRVATSKI</string>
    <string name="language_label_sr">RS SRPSKI</string>
    <string name="admin_pin_title">VNESITE ADMINISTRATORSKI PIN</string>
    <string name="admin_pin_hint">ADMINISTRATORSKI PIN</string>
    <string name="dialog_ok">V REDU</string>
    <string name="dialog_cancel">PREKLI&#268;I</string>
    <string name="wrong_pin">NAPA&#268;EN PIN</string>
    <string name="keep_screen_on_charging_label">ZASLON VEDNO VKLOPLJEN MED NAPAJANJEM</string>
    <string name="keep_screen_on_charging_enabled">VKLOPLJENO</string>
    <string name="keep_screen_on_charging_disabled">IZKLOPLJENO</string>
    <string name="power_protection_title">POWER ZA&#352;&#268;ITA</string>
    <string name="power_unplugged_duration_label">KOLIKO &#268;ASA BREZ NAPAJANJA</string>
    <string name="power_critical_battery_label">KRITI&#268;NA BATERIJA</string>
    <string name="aac_settings_not_ready">FUNKCIJA &#352;E NI PRIPRAVLJENA</string>
    <string name="mp3_tile_label">MP3</string>
    <string name="mp3_settings_label">MP3 / LOKALNA GLASBA</string>
    <string name="mp3_open_label">ODPRI</string>
    <string name="mp3_settings_button_label">NASTAVI</string>
    <string name="mp3_section_title">MP3 / LOKALNA GLASBA</string>
    <string name="mp3_section_description">MP3 TIPKA NA GLAVNEM ZASLONU VEDNO ODPRE LOKALNI PREDVAJALNIK.</string>
    <string name="mp3_open_settings_button">ODPRI MP3 / LOKALNO GLASBO</string>
    <string name="radio_empty_label">RADIO</string>
    <string name="radio_station_missing">NI POSTAJE</string>
    <string name="radio_settings_title">RADIO NASTAVITVE</string>
    <string name="back_button_label">NAZAJ</string>
    <string name="radio_page_preview">STRAN 1</string>
    <string name="radio_page_format">STRAN %1$d</string>
    <string name="radio_slot_1_preview">1. RADIO 1</string>
    <string name="radio_slot_2_preview">2. RADIO 2</string>
    <string name="radio_slot_3_preview">3. ROKS UA</string>
    <string name="radio_slot_4_preview">4. KISS FM</string>
    <string name="radio_slot_5_preview">5. NASHE UA</string>
    <string name="radio_slot_6_preview">6. MP3</string>
    <string name="radio_visibility_label">VIDNO</string>
    <string name="radio_edit_label">UREDI</string>
    <string name="radio_previous_page">PREJŠNJA STRAN</string>
    <string name="radio_next_page">NASLEDNJA STRAN</string>
    <string name="radio_add_station">DODAJ POSTAJO</string>
    <string name="aac_label_zejna">&#381;EJNA</string>
    <string name="aac_label_lacna">LA&#268;NA</string>
    <string name="aac_label_pomoc">POMO&#268;</string>
    <string name="aac_label_da">DA</string>
    <string name="aac_label_wc">WC</string>
    <string name="aac_label_dobro">DOBRO</string>
    <string name="aac_label_slabo">SLABO</string>
    <string name="aac_label_ne">NE</string>
    <string name="aac_label_utrujena">UTRUJENA</string>
    <string name="aac_label_mraz">MRAZ</string>
    <string name="aac_label_vroce">VRO&#268;E</string>
    <string name="aac_label_bolecina">BOLE&#268;INA</string>
    <string name="aac_label_domov">DOMOV</string>
    <string name="aac_label_zdravnik">ZDRAVNIK</string>
    <string name="aac_label_druzina">DRU&#381;INA</string>
    <string name="aac_label_stop">STOP</string>
    <string name="power_overlay_connect_power">PRIKLOPITE NAPAJANJE</string>
    <string name="power_overlay_power_disconnected">NAPAJANJE NI PRIKLOPLJENO</string>
    <string name="power_overlay_battery_saver_active">VAR&#268;EVALNI NA&#268;IN AKTIVEN</string>
    <string name="power_overlay_sleep_mode_active">SLEEP NA&#268;IN AKTIVEN</string>
    <string name="gps_diagnostics_title">GPS DIAGNOSTIKA</string>
    <string name="gps_signal_label">GPS SIGNAL</string>
    <string name="gps_accuracy_label">LAST ACCURACY</string>
    <string name="gps_last_ignored_reason_label">LAST IGNORED REASON</string>
    <string name="gps_reset_button_label">RESET GPS STATISTIKE</string>
    <string name="gps_statistics_reset_done">GPS STATISTIKE SO RESETIRANE</string>
    <string name="gps_no_accuracy">NO ACCURACY</string>
    <string name="power_mode_off_label">IZKLOPLJENA</string>
    <string name="power_mode_warning_label">OPOZORILO</string>
    <string name="power_mode_sleep_label">AVTOMATSKI SLEEP</string>
    <string name="power_selected_mode_format">IZBRANI NA&#268;IN: %1$s</string>
    <string name="power_mode_saved">NA&#268;IN SHRANJEN</string>
    <string name="power_mode_off_description">Power za&#353;&#269;ita ne izvaja ukrepov.</string>
    <string name="power_mode_warning_description">Ob izklopu napajanja bo prikazano opozorilo.</string>
    <string name="power_mode_sleep_description">Ob izklopu napajanja bo po nastavljenem &#269;asu predlagan sleep.</string>
    <string name="power_status_plugged">NAPAJANJE PRIKLOPLJENO</string>
    <string name="power_status_on_battery">DELO NA BATERIJI</string>
    <string name="power_status_battery_unknown">BATERIJA: NEZNANO</string>
    <string name="power_status_battery_percent_format">BATERIJA: %1$d%%</string>
    <string name="power_status_sleep_active">POWER SLEEP AKTIVEN</string>
    <string name="battery_unknown_short">NEZNANO</string>
</resources>
